--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,5 +1,14 @@
-body {
+.content-container {
     height: 100%;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard {
+    text-align: left;
+    font-weight: bolder;
 }
