Adding timer function

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -30,6 +30,7 @@ h1 {
 
 .start-button button {
     background-color: purple;
+    color: white;
     font-size: 32px;
     font-weight: bold;
     border-radius: 10px;
@@ -37,5 +38,27 @@ h1 {
 }
 
 .start-button button:hover {
-    background-color: pink;
+    background-color:violet;
+}
+
+.question {
+    font-weight: bolder;
+    cursor: pointer;
+    font-size: 24px;
+    padding: 10px 10px;
+    margin-bottom: 10px;
+}
+
+.answer-list .answer {
+    background: purple;
+    color: white;
+    cursor: pointer;
+    padding: 5px 5px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.answer-list .answer:hover {
+    background-color: violet;
 }
