--- a/Develop/style.css
+++ b/Develop/style.css
@@ -63,6 +63,7 @@ p {
     font-size: 18px;
     margin-bottom: 10px;
     border-radius: 10px;
+    display: block;
 }
 
 .answer-list .answer:hover {
